@@ -3,16 +3,14 @@ package com.example.io;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class Listing {
     public static void main(String[] args) throws IOException {
-        var etcDirectory = Paths.get("/etc");
-        try (var stream = Files.list(etcDirectory)) {
+        try (var stream = Files.list(Path.of("/etc"))) {
             stream.forEach(fileName -> System.out.println("File: " + fileName));
         }
 
-        var path = Paths.get("/etc");
+        var path = Path.of("/etc");
         for (Path p : path) {
             System.out.println(p);
         }
